# GymApi.Api/openapi/openapi.yaml
@@ -391,35 +391,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SessionResponsePagedResponse'
-  /api/users/register:
-    post:
-      tags:
-        - Users
-      summary: Register a new user.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RegisterRequest'
-          text/json:
-            schema:
-              $ref: '#/components/schemas/RegisterRequest'
-          application/*+json:
-            schema:
-              $ref: '#/components/schemas/RegisterRequest'
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetails'
   /api/users/me:
     get:
       tags:
@@ -457,13 +428,8 @@ components:
           nullable: true
       additionalProperties: false
     CreateSessionRequest:
-      required:
-        - userId
       type: object
       properties:
-        userId:
-          type: string
-          format: uuid
         label:
           type: string
           nullable: true
@@ -544,17 +510,6 @@ components:
           type: string
           nullable: true
       additionalProperties: { }
-    RegisterRequest:
-      required:
-        - email
-        - name
-      type: object
-      properties:
-        email:
-          type: string
-        name:
-          type: string
-      additionalProperties: false
     RenameSessionRequest:
       required:
         - label
